refactor: refactor the code so that sqlc successfully been used with restful http api
