# internal/docs/swagger.json
@@ -9,39 +9,9 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/users": {
-            "get": {
-                "description": "Get a list of all users",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get all users",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.UserResponse"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            },
+        "/accounts": {
             "post": {
-                "description": "Create a new user with name, email, and password",
+                "description": "Create a new bank account with owner and currency",
                 "consumes": [
                     "application/json"
                 ],
@@ -49,17 +19,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "accounts"
                 ],
-                "summary": "Create a new user",
+                "summary": "Create a new account",
                 "parameters": [
                     {
-                        "description": "User info",
-                        "name": "user",
+                        "description": "Account info",
+                        "name": "account",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateUserRequest"
+                            "$ref": "#/definitions/dto.CreateAccountRequest"
                         }
                     }
                 ],
@@ -67,159 +37,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.UserResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{id}": {
-            "get": {
-                "description": "Get details of a user by their ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get a user by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.UserResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update user details by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Update a user",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Updated user info",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.UpdateUserRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.UserResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete a user by their ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Delete a user",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/db.Account"
                         }
                     },
                     "400": {
@@ -245,66 +63,41 @@
         }
     },
     "definitions": {
-        "models.CreateUserRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "name",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "description": "User's email (must be unique)\nrequired: true\nexample: johndoe@example.com",
-                    "type": "string"
-                },
-                "name": {
-                    "description": "User's full name\nrequired: true\nexample: John Doe",
-                    "type": "string"
-                },
-                "password": {
-                    "description": "User's password (will be hashed before saving)\nrequired: true\nexample: password123",
-                    "type": "string"
-                }
-            }
-        },
-        "models.UpdateUserRequest": {
+        "db.Account": {
             "type": "object",
             "properties": {
-                "email": {
-                    "description": "User's email\nexample: johndoe@example.com",
-                    "type": "string"
+                "balance": {
+                    "type": "integer"
                 },
-                "name": {
-                    "description": "User's full name\nexample: John Doe",
-                    "type": "string"
-                },
-                "password": {
-                    "description": "User's password\nexample: newpassword123",
-                    "type": "string"
-                }
-            }
-        },
-        "models.UserResponse": {
-            "type": "object",
-            "properties": {
                 "created_at": {
-                    "description": "Timestamp when user was created\nexample: 2025-09-06T12:34:56Z",
                     "type": "string"
                 },
-                "email": {
-                    "description": "User's email\nexample: johndoe@example.com",
+                "currency": {
                     "type": "string"
                 },
                 "id": {
-                    "description": "User ID\nexample: 1",
                     "type": "integer"
                 },
-                "name": {
-                    "description": "User's full name\nexample: John Doe",
+                "owner": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.CreateAccountRequest": {
+            "type": "object",
+            "required": [
+                "currency",
+                "owner"
+            ],
+            "properties": {
+                "currency": {
+                    "type": "string",
+                    "enum": [
+                        "USD",
+                        "EUR"
+                    ]
                 },
-                "updated_at": {
-                    "description": "Timestamp when user was last updated\nexample: 2025-09-06T12:34:56Z",
+                "owner": {
                     "type": "string"
                 }
             }
