# internal/dto/account.dto.go
@@ -1,0 +1,7 @@
+// internal/dto/account.dto.go
+package dto
+
+type CreateAccountRequest struct {
+	Owner    string `json:"owner" binding:"required"`
+	Currency string `json:"currency" binding:"required,oneof=USD EUR"`
+}
